# rag-in-python

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: __init__.py  basic_usage.py
src/rag_in_python/: __init__.py  cli.py  core.py  generation.py  indexing.py  retrieval.py
test_docs/: faq.txt  sample.txt
tests/: __init__.py  test_core.py
